@@ -1,5 +1,14 @@
 2008-07-13  Sam Steingold  <sds@gnu.org>
 
+	* defs1.lisp (*load-logical-pathname-translations-database*):
+	since SEARCH-FILE now handles both files and directories
+	similarly, only one element is needed
+	(load-logical-pathname-translations): updated for the search-file
+	changes: when the search finds a directory, it is returned as is
+	instead of its contents
+
+2008-07-13  Sam Steingold  <sds@gnu.org>
+
 	* pathname.d (error_file_stream_unnamed, error_dir_not_exists)
 	(error_noname, error_notdir): print caller
 	(FILE-NAMESTRING, DIRECTORY-NAMESTRING, ABSOLUTE-PATHNAME)
